--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
     <title>Fenerium</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="ortala">
+<body class="text-align-center">
     <h1 class="lacivert fs-48">Fenerium</h1>
+    
     <!-- Navbar - Start -->
     <nav>
-        <a href="index.html" target="_blank">Ana Sayfa</a>
-        <a href="ürünlerimiz.html" target="_blank">Ürünlerimiz</a>
-        <a href="hakkımızda.html" target="_blank">Hakkımızda</a>
+        <a href="index.html">Ana Sayfa</a>
+        <a href="ürünlerimiz.html">Ürünlerimiz</a>
+        <a href="hakkımızda.html">Hakkımızda</a>
     </nav>
     <!-- Navbar - End -->
+    
     <!-- Content - Start -->
     <section>
-    <h2 class="lacivert">Ana Sayfa</h2>
+    <h2 class="dark-blue">Ana Sayfa</h2>
     <p>
         Fenerium sitemize hoşgeldiniz! Bu sitede çeşitli Fenerbahçe ürünlerini bulabilirsiniz. Uygun fiyatlarımız ve kaliteli ürünlerimiz için <a href="ürünlerimiz.html" target="_blank">Ürünlerimiz</a> sayfamızı ziyaret edebilirsiniz.
     </p>
-    <h2 class="lacivert">Sitemizde Bulunan Fenerbahçe Ürünleri</h2>
+    <h2 class="dark-blue">Sitemizde Bulunan Fenerbahçe Ürünleri</h2>
     <ul>
         <li>Forma</li>
         <li>Şort</li>
