--- a/hakkımızda.html
+++ b/hakkımızda.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
@@ -7,16 +7,18 @@
     <title>Hakkımızda</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="ortala">
-    <h1 class="lacivert fs-48">Fenerium</h1>
+<body class="text-align-center">
+    <h1 class="dark-blue fs-48">Fenerium</h1>
+
     <!-- Navbar - Start -->
     <nav>
-        <a href="index.html" target="_blank">Ana Sayfa</a>
-        <a href="ürünlerimiz.html" target="_blank">Ürünlerimiz</a>
-        <a href="hakkımızda.html" target="_blank">Hakkımızda</a>
+        <a href="index.html">Ana Sayfa</a>
+        <a href="ürünlerimiz.html">Ürünlerimiz</a>
+        <a href="hakkımızda.html">Hakkımızda</a>
     </nav>
     <!-- Navbar - End -->
+
     <!-- Content - Start -->
     <section>
-    <h2 class="lacivert">Hakkımızda</h2>
+    <h2 class="dark-blue">Hakkımızda</h2>
     <p class="left">2000 yılı içerisinde Fenerbahçe Spor Kulübüne mali kaynak sağlamak amacı ile yola çıkan FENERIUM markası 2019 yılına gelindiğinde yaklaşık 10.000 m2 de faaliyet gösteren, örnek mağazaları ve satış noktaları ile Fenerbahçe taraftarlarına hizmet veren, Türk Perakende Sektörünün lider kulüp mağazalar zinciri haline gelmiştir.</p>
