--- a/ürünlerimiz.html
+++ b/ürünlerimiz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="ortala">
-    <h1 class="lacivert fs-48">Fenerium</h1>
+    <h1 class="dark-blue fs-48">Fenerium</h1>
     <!-- Navbar - Start -->
     <nav>
-        <a href="index.html" target="_blank">Ana Sayfa</a>
-        <a href="ürünlerimiz.html" target="_blank">Ürünlerimiz</a>
-        <a href="hakkımızda.html" target="_blank">Hakkımızda</a>
+        <a href="index.html">Ana Sayfa</a>
+        <a href="ürünlerimiz.html">Ürünlerimiz</a>
+        <a href="hakkımızda.html">Hakkımızda</a>
     </nav>
     <!-- Navbar - End -->
-    <h2 class="lacivert">Ürünlerimiz</h2>
+    <h2 class="dark-blue">Ürünlerimiz</h2>
     <!-- Articles - Start -->
     <article>
       <ol>
@@ -53,4 +53,4 @@
     </article>
     <!-- Articles - End -->
 </body>
-</html>
+</html> 
